--- a/css/main.css
+++ b/css/main.css
@@ -23,7 +23,21 @@ h6 {
 img {
   width: 100%;
 }
-
+.skip-links{
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+.skip-links a{
+  position: absolute;
+  top: -3em;
+  background-color: rgb(46, 212, 46);
+  color:rgb(0, 0, 0);
+  padding: .5em 1em;
+  font-weight: bold;
+  
+}
+.skip-links a:focus{top:0}
 .main-nav ul {
   list-style: none;
   display: flex;
@@ -31,6 +45,9 @@ img {
   margin: 0;
   padding: 0;
 }
+a:focus{
+  outline: 4px solid black;
+background-color: rgb(43, 221, 221);}
 
 .main-nav ul li {
   flex: 1;
@@ -43,6 +60,11 @@ img {
   text-decoration: none;
   font-size: 1.25rem;
 }
+nav ul li a:hover{
+  text-decoration: underline;
+color: rgb(8, 69, 9);}
+
+p, li {font-size: large;}
 
 form input,
 form textarea {
@@ -68,4 +90,6 @@ form button {
 
 .site-footer {
   padding: 2rem 0;
+  color: black; 
+  background-color: aqua;
 }
